
Fixes:

• Make the --with-ca-certificates configure option work (Vincent Untz)

• fd.o #30117: always emit PresencesChanged when we change our own presence,
  and fix a related memory leak (wjt)

• update our copy of Wocky:
  › fd.o#28051: SRV errors on some networks no longer break Facebook
    logins (wjt)
  › don't fail on missing CRLs if not in strict TLS verification mode
    (fledermaus)

telepathy-gabble 0.9.17 (2010-08-26)
====================================

The "Mona Lisa overdrive" release.

Enhancements:

• Implement TLS certificate support (cosimoc)

• Use TpBaseChannel instead of GabbleBaseChannel (wjt)

• Plugin-provided, privacy-list based presence statuses (ptlo)

Fixes:

• fd.o #29721: start the presence unsure timeout once we connect (wjt)

• fd.o #29000: make CA certificates path configurable (stormer)

• Fix several leaks, improve tests in case of connection leaks (wjt)

telepathy-gabble 0.9.16 (2010-08-19)
====================================

The “still at it” release.

Enhancements:

• Implement XEP-0126: Invisibility (wjt and eeejay)

• Implement XEP-0186: Invisible Command (wjt and eeejay)

• implement org.freedesktop.Telepathy.Protocol (ptlo)

• Add a ActivityProperties.GetActivity method for retrieving an activity's room
  handle from its id (tomeu)

• Add a BuddyInfo.AddActivity method so activities can advertise themselves
  without having to track all the other shared activities (tomeu)

Fixes:

• fd.o #25533: muc-factory: don't associate a request with tubes if a tube was
  requested (jonnylamb)

• muc-factory: rearrange which NewChannels signals come first (jonnylamb)

• Cope if Jingle sharing requests omit <manifest> (wjt)

• fd.o #29113: Skip file collection candidates with invalid addresses (wjt)

• several improvements to the test suite (smcv)

• fixes for building under gcc-4.5 (smcv)

• adapt to the new TLS API (sjoerd)

telepathy-gabble 0.9.15 (2010-06-30)
====================================
